# htmx-demos-rust

./: Cargo.toml
src/: main.rs
templates/: base.html  counter.html  home.html
